edit: menambahkan fitur logout

--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -24,17 +24,15 @@
                 </nav>
                 
                 <div class="logout-section">
-                    <a href="#" class="logout-btn">
+                    <a href="/logout" class="logout-btn">
                         <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                         Logout
                     </a>
                 </div>
             </div>
             
-            <!-- Main Content -->
             <div class="main-content">
                 <div class="content-wrapper">
-                    <!-- Introduction Section -->
                     <section class="introduction">
                         <div class="section-title">
                            <span>Introduction</span>
@@ -46,7 +44,6 @@
                         </div>
                     </section>
                     
-                    <!-- Members Section -->
                     <section class="members">
                         <h1>Members</h1>
                         <div class="members-image">
@@ -55,7 +52,6 @@
                     </section>
                 </div>
                 
-                <!-- Logo -->
                 <div class="logo">
                     <img src="/static/image/Logo PBL.png" alt="FBL Logo">
                 </div>
