--- a/admin/templates/device.html
+++ b/admin/templates/device.html
@@ -10,7 +10,6 @@
     </head>
     <body>
         <div class="container">
-            <!-- Sidebar -->
             <div class="sidebar">
                 <div class="admin-profile">
                     <div class="profile-image">
@@ -29,17 +28,16 @@
                 </nav>
                 
                 <div class="logout-section">
-                    <a href="#" class="logout-btn">
+                    <a href="/logout" class="logout-btn">
                         <img src="/admin/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                         Logout
                     </a>
                 </div>
             </div>
 
-<!-- main -->  
             <div class="info-grid">
                 <h1 class="title">SpyWare Result</h1>
-                    <div class="grid-container"> <!-- Container baru untuk grid box -->
+                    <div class="grid-container"> 
 
                     <div class="info-box beige">
                         <div>
@@ -74,7 +72,6 @@
                     </div>
                 </div>
 
-                            <!-- Logo -->
             <div class="logo">
                 <img src="/admin/static/image/Logo PBL.png" alt="FBL Logo">
             </div>
