--- a/admin/templates/settings.html
+++ b/admin/templates/settings.html
@@ -20,7 +20,7 @@
                 <a class="nav-item" href="/victim">Victim</a>
                 <a class="nav-item active" href="/settings">Settings</a>
            <div class="logout-section">
-                    <a href="#" class="logout-btn">
+                    <a href="/logout" class="logout-btn">
                         <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                         Logout
                     </a>
