--- a/admin/template/dashboard.html
+++ b/admin/template/dashboard.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>BrowserWatch Lab Dashboard</title>
-        <link rel="stylesheet" href="/static/dashboard.css">
+        <link rel="stylesheet" href="/admin/static/dashboard.css">
     </head>
     <body>
         <div class="container">
@@ -26,7 +26,7 @@
                 
                 <div class="logout-section">
                     <a href="#" class="logout-btn">
-                        <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
+                        <img src="/admin/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                         Logout
                     </a>
                 </div>
@@ -58,7 +58,7 @@
             
             <!-- Logo -->
             <div class="logo">
-                <img src="/static/image/Logo PBL.png" alt="FBL Logo">
+                <img src="/admin/static/image/Logo PBL.png" alt="FBL Logo">
             </div>
         </div>
     </div>
