overview (belum rapih)

--- a/admin/templates/history.html
+++ b/admin/templates/history.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SpyWare Result</title>
-    <link rel="stylesheet" href="/admin/static/history.css">
+    <link rel="stylesheet" href="/static/history.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -27,7 +27,7 @@
 
             <div class="logout-section">
                 <a href="#" class="logout-btn">
-                    <img src="/admin/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
+                    <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
                     Logout
                 </a>
             </div>
@@ -69,7 +69,7 @@
 
         <!-- Logo -->
         <div class="logo">
-            <img src="/admin/static/image/Logo PBL.png" alt="PBL Logo">
+            <img src="/static/image/Logo PBL.png" alt="PBL Logo">
         </div>
     </div>
 
