--- a/admin/templates/overview.html
+++ b/admin/templates/overview.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device Dashboard - Overview</title>
-    <link rel="stylesheet" href="/static/network.css">
+    <link rel="stylesheet" href="/static/overview.css">
 </head>
 <body>
     <div class="sidebar">
-        <div class="user-profile">
-            <div class="user-avatar">👤</div>
-            <h3>User 1</h3>
+        <div class="victim-profile">
+            <div class="profile-image">
+                <img src="/static/image/victim-profile.png" alt="victim Profile">
+            <h3>victim 1</h3>
         </div>
         
         <ul class="nav-menu">
