Overview 16/6 (belum rapih)

--- a/admin/templates/dashboard.html
+++ b/admin/templates/dashboard.html
@@ -18,9 +18,9 @@
                 </div>
                 
                 <nav class="sidebar-nav">
-                    <a href="/" class="nav-item active">Dashboard</a>
-                    <a href="/victim" class="nav-item">Victim</a>
-                    <a href="/settings" class="nav-item">Settings</a>
+                    <a href="/templates/dashboard.html" class="nav-item active">Dashboard</a>
+                    <a href="/templates/victim.html" class="nav-item">Victim</a>
+                    <a href="/templates/settings.html" class="nav-item">Settings</a>
                 </nav>
                 
                 <div class="logout-section">
