--- a/admin/templates/settings.html
+++ b/admin/templates/settings.html
@@ -16,9 +16,9 @@
                 <h2>Admin</h2>
             </div>
             <div class="sidebar-nav">
-                <a class="nav-item" href="/">Dashboard</a>
-                <a class="nav-item" href="/victim">Victim</a>
-                <a class="nav-item active" href="/settings">Settings</a>
+                <a class="nav-item" href="/templates/dashboard.html">Dashboard</a>
+                <a class="nav-item" href="/templates/victim.html">Victim</a>
+                <a class="nav-item active" href="/templates/settings.html">Settings</a>
            <div class="logout-section">
                     <a href="/logout" class="logout-btn">
                         <img src="/static/image/logout-icon.png" alt="Logout Icon" class="logout-icon">
