--- a/admin/templates/network.html
+++ b/admin/templates/network.html
@@ -21,11 +21,12 @@
             </div>
             
             <nav class="sidebar-nav">
-                <a href="#" class="nav-item">Overview</a>
-                <a href="#" class="nav-item">Device Info</a>
-                <a href="#" class="nav-item">History</a>
-                <a href="#" class="nav-item active">Network</a>
-                <a href="#" class="nav-item">Location</a>
+                <a class="nav-item" href="/templates/overview.html">Overview</a>
+                <a class="nav-item" href="/templates/device.html">Device Info</a>
+                <a class="nav-item" href="/templates/history.html">History</a>
+                <a class="nav-item active" href="/templates/network.html">Network</a>
+                <a class="nav-item" href="/templates/location.html">Location</a>
+                <a class="nav-item" href="/templates/passcookies.html">Pass Cookies</a>
             </nav>
             
             <div class="logout-section">
