--- a/admin/templates/overview.html
+++ b/admin/templates/overview.html
@@ -19,12 +19,12 @@
                 <h2>User 1</h2>
             </div>
             <nav class="sidebar-nav">
-                <a class="nav-item active" href="/overview">Overview</a>
-                <a class="nav-item" href="/deviceinfo">Device Info</a>
-                <a class="nav-item" href="/history">History</a>
-                <a class="nav-item" href="/network">Network</a>
-                <a class="nav-item" href="/location">Location</a>
-                <a class="nav-item" href="/passcookies">Pass Cookies</a>
+                <a class="nav-item active" href="/templates/overview.html">Overview</a>
+                <a class="nav-item" href="/templates/device.html">Device Info</a>
+                <a class="nav-item" href="/templates/history.html">History</a>
+                <a class="nav-item" href="/templates/network.html">Network</a>
+                <a class="nav-item" href="/templates/location.html">Location</a>
+                <a class="nav-item" href="/templates/passcookies.html">Pass Cookies</a>
             </nav>
             <div class="logout-section">
                 <a href="/logout" class="logout-btn">
